collection request added to pipeline routes
